--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,4 +1,5 @@
 //use gmf
 @import "vendor/gmf-sys/app.scss";
 @import "vendor/suite-amiba/app.scss";
+@import "vendor/suite-mobile/app.scss";
 @import "layouts/layouts.scss";
