--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11072,6 +11072,8 @@ img.md-icon {
 
 .md-pags .md-pag-tabs {
   background: #80cbc4;
+  -webkit-box-shadow: 0 1px 1px #49978e;
+          box-shadow: 0 1px 1px #49978e;
 }
 
 .md-pags .md-pag-tabs .md-pag-tab {
