--- a/public/css/app.css
+++ b/public/css/app.css
@@ -4435,7 +4435,6 @@ button:focus {
 }
 
 .md-dialog-actions .md-button {
-  min-width: .64rem;
   margin: 0;
   padding: 0 .08rem;
 }
@@ -9646,11 +9645,11 @@ img.md-icon {
   background-color: #fcfcfc;
   border-top: .01rem solid #e0e0e0;
   color: rgba(0, 0, 0, 0.54);
-  min-height: .56rem;
+  min-height: .4rem;
 }
 
 .md-table-pagination {
-  height: .56rem;
+  height: .4rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -9809,8 +9808,8 @@ img.md-icon {
 }
 
 .md-table .md-table-head-container {
-  height: .56rem;
-  padding: .14rem 0;
+  /*height: .56rem;*/
+  padding: .06rem 0;
   width: 100%;
   -webkit-transition: all 0.4s cubic-bezier(0.25, 0.8, 0.25, 1);
   transition: all 0.4s cubic-bezier(0.25, 0.8, 0.25, 1);
@@ -10900,11 +10899,23 @@ img.md-icon {
   }
 }
 
+.md-query-case > .md-button {
+  color: #34957a;
+}
+
 .md-query-case-dialog .md-dialog {
   min-width: 7rem;
   min-height: 70%;
   max-width: 80%;
   max-height: 90%;
+}
+
+.md-query-case-dialog .md-dialog-actions {
+  background: #075140;
+}
+
+.md-query-case-dialog .md-tabs .md-tab {
+  padding: 0px;
 }
 
 @media (max-width: 944px) {
