--- a/resources/assets/js/themes/default.scss
+++ b/resources/assets/js/themes/default.scss
@@ -1,8 +1,10 @@
 @import "~gmf/theme/engine";
 
 @include md-register-theme("default", (
-  primary: md-get-palette-color(blue,A200),
-  accent: md-get-palette-color(red, A200)
+  primary:#0f9d58,
+  accent:md-get-palette-color(deeporange, 500),
+  text-primary-on-primary:#FFFFFF,
 ));
 
 @import "./imports.scss";
+
